
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {unsigned char l137; scalar_t__ g; } ;
typedef TYPE_1__ s ;



__attribute__((used)) static void l(s
 *b,unsigned char z,unsigned char r){unsigned short l93=z|r<<8|b->
l137; * (volatile unsigned short* )((b)->g+1024)=65535; * (volatile
unsigned short* )((b)->g+1028)=l93; * (volatile unsigned short* )((b)->
g+1024)=65535; * (volatile unsigned short* )((b)->g+1028)=l93^64; * (
volatile unsigned short* )((b)->g+1024)=65535; * (volatile unsigned
short* )((b)->g+1028)=l93; * (volatile unsigned short* )((b)->g+1024)=
255;}
